--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ h2 {
 p {
     font-size: 18px;
 }
+footer {
+    margin-bottom: 30px;
+}
 .img_padrao {
     margin-bottom: 30px;
     width: 300px;
