--- a/cursos avançados da DIO/instagram-dio-master/style.css
+++ b/cursos avançados da DIO/instagram-dio-master/style.css
@@ -8,7 +8,6 @@
 }
 
 body {
-    border: 1px solid yellow;
     width: 100%;
     min-height: 100vh;
     background-color: rgb(243, 243, 243);
@@ -24,7 +23,6 @@ body {
 }
 
 .instagram-phone {
-    border: 1px solid black;
     display: flex;
     width: 50%;
     justify-content: center;
@@ -36,7 +34,6 @@ body {
 }
 
 .instagram-continue {
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -127,3 +124,30 @@ body {
     background-image: url('img/googleplay-button.png');
 }
 
+@media(max-width: 1024px) {
+    .instagram-wrapper {
+        width: 90%;
+    }
+}
+
+@media (max-width: 650px) {
+    body {
+        background-color: #ffffff;
+    }
+    
+    .instagram-wrapper {
+        width: 90%;
+    }
+
+    .instagram-phone {
+        display: none
+    }
+
+    .instagram-continue {
+        width: 100%;
+    }
+
+    .group {
+        border: 1px solid transparent;
+    }
+}
